# freqprob

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LLM_DOCUMENTATION.md  MANIFEST.in  Makefile  README.md  final_syntax_fix.py  fix_d212_errors.py  fix_docstring_syntax.py  fix_remaining_syntax.py  format.sh  format_code.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  quality.yml  release.yml  version-bump.yml
docs/: LLM_DOCUMENTATION.md  api_reference.md  benchmarks.py  development.md  performance_comparison.md  run_benchmarks.sh  test_tutorial_1_basic_smoothing.ipynb  test_tutorial_2_advanced_methods.ipynb  test_tutorial_3_efficiency_memory.ipynb  test_tutorial_4_real_world_applications.ipynb  tutorial_1_basic_smoothing.html  tutorial_1_basic_smoothing.ipynb  tutorial_1_basic_smoothing.out.py  tutorial_1_basic_smoothing.py  tutorial_2_advanced_methods.html  tutorial_2_advanced_methods.ipynb  tutorial_2_advanced_methods.out.py  tutorial_2_advanced_methods.py  tutorial_3_efficiency_memory.html  tutorial_3_efficiency_memory.ipynb  tutorial_3_efficiency_memory.out.py  tutorial_3_efficiency_memory.py  tutorial_4_real_world_applications.html  tutorial_4_real_world_applications.ipynb  tutorial_4_real_world_applications.out.py  tutorial_4_real_world_applications.py  user_guide.md  validation_guide.md
docs/archive/: tutorial_3_efficiency_memory.ipynb  tutorial_4_real_world_applications.ipynb
freqprob/: __init__.py  advanced.py  base.py  basic.py  cache.py  freqprob.py  lazy.py  lidstone.py  memory_efficient.py  mock.py  profiling.py  smoothing.py  streaming.py  utils.py  validation.py  vectorized.py
scripts/: benchmarks.py  run_benchmarks.py  validation.py  validation_report.py
tests/: test_efficiency.py  test_freqprob.py  test_lib.py  test_memory_management.py  test_numerical_stability.py  test_property_based.py  test_regression_reference.py  test_smoothing.py  test_statistical_correctness.py  test_utils.py  test_validation.py
